--- a/Assignment2.rmd
+++ b/Assignment2.rmd
@@ -495,7 +495,7 @@ ggplot(data=mergedf) + geom_polygon(aes(x=long, y=lat, fill=averageresidual, gro
 Remus Gong contributed to Findings, Statistical Methodology, LASSO Regression and Appendix.
 Sam Glanfield contributed to Findings, Statistical Methodology, Stepwise Regression and Heatmap.
 Thomas Broadbent contributed to Findings,  Statistical Methodology, RIDGE and LASSO Regression, $R^2$ Cross Validation and Appendix.
-Frank Or contributed to Findings, Statistical Methodology, and LASSO Regression.
+Frank Or contributed to Findings, Statistical Methodology, and LASSO Regression, Poster.
 
 # References
 
